@@ -49,6 +49,9 @@ application {
     mainModule = 'klikmodule'
     mainClass = main_class_name
 
+    // Java VM option for ZGC garbage collector:
+    //-XX:+UseZGC -XX:+ZGenerational
+
     // Java VM RAM size options:
     applicationDefaultJvmArgs = ["-XX:MaxRAMPercentage=90.0"]
     // if you have 16GB or more and want to give a lot of RAM to klik to be able to maintain a lot of open windows:
